--- a/001-main/0.000001/index.html
+++ b/001-main/0.000001/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <header>
+        <div class="logo">paulimpin</div>
         <nav class="nav">
             <a href="#">Cursos</a>
             <a href="#">Sobre Nós</a>
@@ -18,8 +19,20 @@
         </nav>
         <form action="" class="form">
         <input type="text" placeholder="Pesquisar...">
+        <button type="submit">GO</button>
          </form>
     </header>
+    <section class="sec">
+        <p class="titulosec">Categorias</p>
+    </section>
+    <div class="pit">
+        <h1>TECNOLOGIA</h1>
+        <h1>EDUCAÇÃO</h1>
+        <h1>SAÚDE</h1>
+        <h1>FINANÇAS</h1>
+        <h1>CASE STUDIES</h1>
+    </div>
+
 </body>
 </html>
        
